# TheAgeOfSail

./: README.md  final_map.json  main.py  map_generation.py  pyproject.toml  star_chart.jinja  star_chart_generation.py
esp32_s3/wheel/: code.py  rotary_encoder.py  settings.toml  wifi_manager.py
static/: game.js  index.html  ship_view.html  ship_view.js
templates/: full_map.html  ship_view.html
